Enable device sync on dev5